--- a/index.css
+++ b/index.css
@@ -1,103 +1,60 @@
-body {
+body{
 
-    background-color: mediumpurple;
-
-}
-
-.container {
-
-    width: 35%;
-    border: 1px solid black;
-    padding: 25px;
-    margin: 10px;
-    border-radius: 20px;
-    background-color: mediumorchid;
-    box-shadow: 10px 10px 10px 10px black;
-    font-size: 20px;
-    display: grid;
-    grid-template-columns: repeat(4, 100px);
-}
-
-#output {
-
-    height: 150px;
-    background-color: rgb(227, 160, 225);
-    margin-bottom: 30px;
-    border-radius: 10px;
-    padding: 10px;
-    grid-column: 1 / -1;
-}
-
-
-.userInput {
-
-    height: 30px;
-    margin-bottom: 10px;
-    margin: 10px;
+background-color: black;
 
 }
 
-#clear {
+.grid-container{
 
-    margin-top: 15px;
-    height: 30px;
-    grid-column: span 2;
-    margin: 10px;
-
-}
-
-
-button {
-
-    border-radius: 40%;
-    background-color: lightgray;
-
-}
-
-button:hover {
-    background-color: blueviolet;
-}
-
-@media screen and (max-width: 576px) {
-
-    .userInput {
-
-        width: 50px;
-
-    }
-
-    .container {
-
-        width: 75%;
-        padding: 5%;
-
-
-    }
+display: grid;
+grid-template-columns: repeat(4, 50px);
+grid-template-rows: repeat(7, 50px) ;
+grid-gap: 20px;
+margin: auto;
+margin-top: 50px;
+margin-bottom: 50px;
+padding:50px ;
+width: 350px;
+border: 3px solid black ;
+border-radius: 30px;
+box-shadow: 0px 0px 10px 10px orchid;
 
 }
 
-@media screen and (max-width: 540px) {
+.grid-output{
 
-    .userInput {
+grid-column: span 4;
+grid-row: span 2;
+border: 2px solid black;
+border-radius: 10px;
+height: 100px;
+padding: 10px;
+background-color: mediumorchid;
 
-        width: 49px;
-
-    }
 }
 
-@media screen and (max-width: 488px) {
+.grid-button17{
 
-    .userInput {
+grid-column: span 2;
 
-        width: 48px;
+}
 
-    }
+button{
 
-    .container {
+border-radius: 30px;
+height: 60px;
+width: 60px;
 
-        width: 100%;
+}
 
+#clearbtns{
 
-    }
+width: 100px;
+
+}
+
+button:hover{
+
+    background-color: orchid;
 
 }
