--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@ background-color: black;
 
 .grid-container{
 
+text-align: center;
+justify-content: center;
 display: grid;
 grid-template-columns: repeat(4, 50px);
 grid-template-rows: repeat(7, 50px) ;
@@ -13,8 +15,8 @@ grid-gap: 20px;
 margin: auto;
 margin-top: 50px;
 margin-bottom: 50px;
-padding:50px ;
-width: 350px;
+padding: 50px;
+width: 400px;
 border: 3px solid black ;
 border-radius: 30px;
 box-shadow: 0px 0px 10px 10px orchid;
@@ -37,6 +39,12 @@ background-color: mediumorchid;
 
 grid-column: span 2;
 
+}
+
+.grid-button18{
+
+    grid-column: span 2;
+    
 }
 
 button{
