--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 body{
 
-background-color: black;
+background-image: url(/Background.png);
+background-size: cover;
+height: 100vh;
+box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+font-family: fantasy;
+font-size: 25px;
 
 }
 
@@ -19,7 +24,7 @@ padding: 50px;
 width: 350px;
 border: 3px solid black ;
 border-radius: 30px;
-box-shadow: 0px 0px 10px 10px orchid;
+box-shadow: 0px 0px 10px 10px rgb(49, 4, 47);
 
 }
 
@@ -31,7 +36,9 @@ border: 2px solid black;
 border-radius: 10px;
 height: 100px;
 padding: 10px;
-background-color: mediumorchid;
+background-color: rgb(54, 17, 52);
+color: rgb(209, 40, 215);
+
 
 }
 
@@ -53,6 +60,7 @@ border-radius: 30px;
 height: 60px;
 width: 60px;
 
+
 }
 
 #clearbtns{
@@ -63,6 +71,6 @@ width: 100px;
 
 button:hover{
 
-    background-color: orchid;
+    background-color: rgb(146, 30, 142);
 
 }
