--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
 
 background-image: url(/Background.png);
@@ -5,7 +12,7 @@ background-size: cover;
 height: 100vh;
 box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
 font-family:monospace;
-font-size: 25px;
+font-size: 20px;
 
 
 }
@@ -35,10 +42,13 @@ grid-column: span 4;
 grid-row: span 2;
 border: 2px solid black;
 border-radius: 10px;
-height: 100px;
+min-height: 100px;
+height: fit-content;
 padding: 10px;
 background-color: rgb(54, 17, 52);
 color: rgb(209, 40, 215);
+word-break: break-word;
+
 
 
 }
