--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 }
 body{
 
-background-image: linear-gradient(rgb(140, 30, 134),black);
+background-image: linear-gradient(rgb(121, 41, 117),black);
 height: 100vh ;
 
 }
@@ -28,7 +28,7 @@ width: 350px;
 border: 3px solid black ;
 border-radius: 30px;
 box-shadow: 0px 0px 10px 10px rgb(0, 0, 0);
-background-image: url(/Background.png);
+background-image: url(/CBackground.png);
 background-size: cover;
 
 }
@@ -42,8 +42,10 @@ border-radius: 10px;
 min-height: 100px;
 height: fit-content;
 padding: 10px;
-background-color: rgb(140, 30, 134);
-color: rgb(209, 40, 215);
+background-color: rgb(121, 41, 117);
+color: black;
+font-weight: 600;
+font-size: 20px;
 word-break: break-word;
 
 
@@ -67,7 +69,8 @@ button{
 border-radius: 30px;
 height: 60px;
 width: 60px;
-
+font-size: 20px;
+font-weight: 700;
 
 }
 
@@ -81,6 +84,6 @@ border-radius: 40px;
 
 button:hover{
 
-    background-color: rgb(140, 30, 134);
+    background-color: rgb(121, 41, 117);
 
 }
