--- a/index.css
+++ b/index.css
@@ -8,14 +8,11 @@
 
 
 /* I have stuck to the three color rule */
-
 body{
 
-background-image: linear-gradient(rgb(121, 41, 117),black);
-height: 100vh ;
+    background-image: url(/CBackground.png);
 
 }
-
 .grid-container{
 
 text-align: center;
@@ -24,7 +21,7 @@ display: grid;
 grid-template-columns: repeat(4, 50px);
 grid-template-rows: repeat(7, 50px) ;
 grid-gap: 20px;
-margin: auto;
+margin: 0 auto;
 margin-top: 50px;
 margin-bottom: 50px;
 padding: 50px;
@@ -32,8 +29,8 @@ width: 350px;
 border: 3px solid black ;
 border-radius: 30px;
 box-shadow: 0px 0px 10px 10px rgb(0, 0, 0);
-background-image: url(/CBackground.png);
-background-size: cover;
+/* background-image: url(/CBackground.png);
+background-size: cover; */
 
 }
 
@@ -46,7 +43,7 @@ border-radius: 10px;
 min-height: 100px;
 height: fit-content;
 padding: 10px;
-background-color: rgb(121, 41, 117);
+background-color: rgb(102, 36, 99);
 color: black;
 font-weight: 600;
 font-size: 20px;
@@ -89,6 +86,6 @@ border-radius: 40px;
 
 button:hover{
 
-    background-color: rgb(121, 41, 117);
+    background-color: rgb(102, 36, 99);
 
 }
