--- a/index.css
+++ b/index.css
@@ -9,10 +9,9 @@
 
 /* I have stuck to the three color rule */
 body{
-
-    background-image: url(/CBackground.png);
-
+    background-color: rgb(102, 36, 99);
 }
+
 .grid-container{
 
 text-align: center;
@@ -29,8 +28,8 @@ width: 350px;
 border: 3px solid black ;
 border-radius: 30px;
 box-shadow: 0px 0px 10px 10px rgb(0, 0, 0);
-/* background-image: url(/CBackground.png);
-background-size: cover; */
+background-image: url(/CBackground.png);
+background-size: cover;
 
 }
 
